manifest/objects/Apttus__TemplateClauseReference__c.object
<CustomObject>
    <description>Represents a clause reference in a template or a library</description>
    <fields>
        <fullName>Apttus__ClauseId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ID of the associated clause</description>
        <label>Clause</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Template References</relationshipLabel>
        <relationshipName>TemplateReferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ClauseReferenceId__c</fullName>
        <description>The clause external reference identifier</description>
        <label>Clause Reference Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ClauseVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to clause version</description>
        <inlineHelpText>Lookup to clause version</inlineHelpText>
        <label>Clause Version</label>
        <referenceTo>Apttus__TemplateVersion__c</referenceTo>
        <relationshipLabel>Template Clause References (Clause Version)</relationshipLabel>
        <relationshipName>TemplateClauseReferenceClauseVersion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__NeedsPublishing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the clause needs to be published.</description>
        <inlineHelpText>Indicates whether the clause needs to be published.</inlineHelpText>
        <label>Needs Publishing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__TemplateId__c</fullName>
        <description>ID of the template or library</description>
        <label>Template</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Clause References</relationshipLabel>
        <relationshipName>ClauseReferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__TemplateReferenceId__c</fullName>
        <description>The template external reference identifier</description>
        <label>Template Reference Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Template Clause Reference</label>
    <nameField>
        <displayFormat>REF-{000000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Clause References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>